# todo

./: .env  README.md  alembic.ini  main.py  pyproject.toml  seed_data.py  test_app.py
.devcontainer/: Dockerfile
Todo/Schema/: todo_schema.py
Todo/model/: todo_model.py
Todo/routes/: todo_routes.py
alembic/: env.py
alembic/versions/: 0411ba5d7ac2_migration.py  3572160406c1_init_tables.py  3bfea09fe697_migration.py  523012d6cfea_auto_migration.py  8b79aac6ef30_migration.py  d71e3ddf8094_auto_migration.py  fe207b88c084_auto_migration.py
config/: database.py  settings.py
user/Schema/: user_schema.py
user/model/: user_model.py
user/routes/: user_routes.py
